fixing menu color on mobile

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -217,6 +217,9 @@
 }
 /*Mobile Media Changes*/
 @media (max-width: 480px) {
+  .theme-name {
+  color: var(--quaternary);
+}
   .navbar {
     padding: 0.5rem 0;
   }
